...
        component={HomeScreen}
        options={{ title: "🌻 Home" }}
      />
      <Tab.Screen
        name="Garden"
        component={GardenScreen}
        options={{ title: "🌿 Garden" }}
      />
      <Tab.Screen
        name="Catalog"
        component={CatalogScreen}
        options={{ title: "📚 Catalog" }}
      />
...
